--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "vue": "2.6.10"
   },
   "peerDependencies": {
-    "@v4fire/core": "^3.73.1",
+    "@v4fire/core": "https://github.com/v4fire/core#client/issues/490",
     "webpack": "^5.65.0"
   },
   "optionalDependencies": {
