--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "^3.10.2",
-    "@v4fire/core": "file:.yalc/@v4fire/core",
+    "@v4fire/core": "https://github.com/v4fire/core#client/issues/490",
     "@v4fire/linters": "^1.9.0",
     "husky": "^7.0.4",
     "nyc": "^15.1.0",
