--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components && npm run test:jasmine",
     "test:linters": "npm run test:typescript && npm run test:eslint",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
-    "test:eslint": "eslint \"./config/**/*.js\" \"./build/**/*.js\" \"./src/**/*.js\" \"./src/**/*.ts\"",
+    "test:eslint": "eslint \"./config/**/*.js\" \"./build/**/*.js\" \"./build/**/*.ts\" \"./src/**/*.js\" \"./src/**/*.ts\"",
     "test:components": "gulp test:components --test-processes 2",
     "test:components:chrome": "npm run test:components -- --browsers chrome --retries 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
