--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "webpack": "^5.65.0"
   },
   "optionalDependencies": {
-    "@pzlr/build-core": "https://github.com/pzlr/build-core#client/issues/490",
+    "@pzlr/build-core": "^2.13.0",
     "@pzlr/stylus-inheritance": "^3.1.0",
     "@types/glob": "^7.1.3",
     "@types/webpack": "^5.28.0",
