--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.16.1",
+  "version": "3.16.2",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -37,7 +37,7 @@
     "test:components": "gulp test:components --test-processes 2",
     "test:components:chrome": "npm run test:components -- --browsers chrome --retries 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
-    "up": "npm i && npm up && npm audit fix"
+    "up": "npm i && npm up"
   },
   "dependencies": {
     "escaper": "^3.0.6",
