--- a/package.json
+++ b/package.json
@@ -140,7 +140,8 @@
     "@v4fire/linters": "^1.9.0",
     "husky": "^7.0.4",
     "nyc": "^15.1.0",
-    "playwright": "^1.16.3",
+    "playwright": "^1.19.2",
+    "@playwright/test": "^1.19.2",
     "webpack": "^5.65.0"
   }
 }
