--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "up": "npm i && npm up"
   },
   "dependencies": {
-    "escaper": "^3.0.6",
-    "eventemitter2": "^6.4.5",
-    "jsdom": "^16.7.0",
-    "path-to-regexp": "^3.2.0",
-    "requestidlecallback": "^0.3.0",
-    "snakeskin": "^7.5.1",
-    "svg-transform-loader": "^2.0.13",
+    "escaper": "3.0.6",
+    "eventemitter2": "6.4.5",
+    "jsdom": "16.7.0",
+    "path-to-regexp": "3.2.0",
+    "requestidlecallback": "0.3.0",
+    "snakeskin": "7.5.1",
+    "svg-transform-loader": "2.0.13",
     "tslib": "2.3.1",
     "vue": "2.6.10"
   },
@@ -55,87 +55,87 @@
     "webpack": "^5.65.0"
   },
   "optionalDependencies": {
-    "@pzlr/build-core": "^2.13.0",
-    "@pzlr/stylus-inheritance": "^3.1.0",
-    "@types/glob": "^7.1.3",
-    "@types/webpack": "^5.28.0",
-    "@v4fire/config": "^1.0.0",
-    "@v4fire/design-system": "^1.23.0",
-    "arg": "^5.0.0",
-    "autoprefixer": "^10.3.1",
-    "browserslist": "^4.15.0",
-    "buble": "^0.20.0",
-    "collection.js": "^6.7.11",
-    "config": "^1.31.0",
-    "copy-dir": "^1.3.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "cssnano": "^5.0.7",
-    "del": "^6.0.0",
-    "delay": "^5.0.0",
-    "extract-loader": "^5.1.0",
-    "fast-css-loader": "^1.0.2",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
-    "glob": "^7.1.6",
-    "glob-promise": "^4.2.0",
-    "gulp": "^4.0.2",
-    "gulp-csso": "^4.0.1",
+    "@pzlr/build-core": "2.13.0",
+    "@pzlr/stylus-inheritance": "3.1.0",
+    "@types/glob": "7.2.0",
+    "@types/webpack": "5.28.0",
+    "@v4fire/config": "1.0.0",
+    "@v4fire/design-system": "1.23.0",
+    "arg": "5.0.1",
+    "autoprefixer": "10.4.2",
+    "browserslist": "4.19.1",
+    "buble": "0.20.0",
+    "collection.js": "6.7.11",
+    "config": "1.31.0",
+    "copy-dir": "1.3.0",
+    "css-minimizer-webpack-plugin": "3.4.1",
+    "cssnano": "5.0.17",
+    "del": "6.0.0",
+    "delay": "5.0.0",
+    "extract-loader": "5.1.0",
+    "fast-css-loader": "1.0.2",
+    "file-loader": "6.2.0",
+    "fs-extra": "10.0.0",
+    "glob": "7.2.0",
+    "glob-promise": "4.2.2",
+    "gulp": "4.0.2",
+    "gulp-csso": "4.0.1",
     "gulp-ext-replace": "0.3.0",
-    "gulp-favicons": "^3.0.0",
-    "gulp-gzip": "^1.4.2",
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-load-plugins": "^2.0.6",
-    "gulp-plumber": "^1.2.1",
-    "gulp-run": "^1.7.1",
-    "hash-files": "^1.1.1",
-    "hasha": "^5.2.2",
-    "html-loader": "^2.1.2",
-    "image-webpack-loader": "^7.0.1",
-    "imagemin-webp": "^6.0.0",
-    "is-path-inside": "^3.0.2",
-    "merge2": "^1.4.1",
-    "mini-css-extract-plugin": "^2.2.0",
-    "monic": "^2.6.0",
-    "monic-loader": "^3.0.1",
-    "nanoid": "^3.1.20",
-    "nib": "^1.1.2",
-    "node-static": "^0.7.11",
-    "path-equal": "^1.1.1",
-    "portfinder": "^1.0.28",
-    "postcss": "^8.3.6",
-    "postcss-loader": "^6.1.1",
-    "raw-loader": "^4.0.2",
-    "simple-progress-webpack-plugin": "^2.0.0",
-    "snakeskin-loader": "^8.0.1",
-    "ss2vue": "^1.1.0",
-    "style-loader": "^3.2.1",
-    "stylus": "^0.54.8",
-    "stylus-loader": "^6.1.0",
-    "svg-sprite-loader": "^6.0.9",
-    "svg-url-loader": "^7.1.1",
-    "svgo": "^2.3.1",
-    "svgo-loader": "^3.0.0",
-    "svgo-sync": "^0.5.1",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^9.2.3",
+    "gulp-favicons": "3.0.0",
+    "gulp-gzip": "1.4.2",
+    "gulp-htmlmin": "5.0.1",
+    "gulp-imagemin": "7.1.0",
+    "gulp-load-plugins": "2.0.7",
+    "gulp-plumber": "1.2.1",
+    "gulp-run": "1.7.1",
+    "hash-files": "1.1.1",
+    "hasha": "5.2.2",
+    "html-loader": "2.1.2",
+    "image-webpack-loader": "7.0.1",
+    "imagemin-webp": "6.0.0",
+    "is-path-inside": "3.0.3",
+    "merge2": "1.4.1",
+    "mini-css-extract-plugin": "2.5.3",
+    "monic": "2.6.1",
+    "monic-loader": "3.0.2",
+    "nanoid": "3.2.0",
+    "nib": "1.1.2",
+    "node-static": "0.7.11",
+    "path-equal": "1.1.3",
+    "portfinder": "1.0.28",
+    "postcss": "8.4.6",
+    "postcss-loader": "6.2.1",
+    "raw-loader": "4.0.2",
+    "simple-progress-webpack-plugin": "2.0.0",
+    "snakeskin-loader": "8.0.1",
+    "ss2vue": "1.1.0",
+    "style-loader": "3.3.1",
+    "stylus": "0.54.8",
+    "stylus-loader": "6.2.0",
+    "svg-sprite-loader": "6.0.11",
+    "svg-url-loader": "7.1.1",
+    "svgo": "2.8.0",
+    "svgo-loader": "3.0.0",
+    "svgo-sync": "0.5.1",
+    "terser-webpack-plugin": "5.3.1",
+    "ts-loader": "9.2.6",
     "typescript": "4.4.4",
-    "typograf": "^6.11.1",
-    "upath": "^2.0.1",
-    "url-loader": "^4.1.1",
+    "typograf": "6.14.0",
+    "upath": "2.0.1",
+    "url-loader": "4.1.1",
     "vue-template-compiler": "2.6.10",
-    "vue-template-es2015-compiler": "^1.9.1",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.9.1",
-    "worker-loader": "^3.0.7"
+    "vue-template-es2015-compiler": "1.9.1",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.2",
+    "worker-loader": "3.0.8"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.10.2",
-    "@v4fire/core": "^3.73.1",
-    "@v4fire/linters": "^1.9.0",
-    "husky": "^7.0.4",
-    "nyc": "^15.1.0",
-    "playwright": "^1.16.3",
-    "webpack": "^5.65.0"
+    "@types/jasmine": "3.10.3",
+    "@v4fire/core": "3.74.7",
+    "@v4fire/linters": "1.9.0",
+    "husky": "7.0.4",
+    "nyc": "15.1.0",
+    "playwright": "1.18.1",
+    "webpack": "5.68.0"
   }
 }
