--- a/package.json
+++ b/package.json
@@ -140,8 +140,8 @@
     "@v4fire/linters": "^1.9.0",
     "husky": "^7.0.4",
     "nyc": "^15.1.0",
-    "playwright": "^1.19.2",
-    "@playwright/test": "^1.19.2",
+    "playwright": "1.20.0-beta-1646791472000",
+    "@playwright/test": "1.20.0-beta-1646791472000",
     "webpack": "^5.65.0"
   }
 }
