--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "dev:file": "gulp build:tsconfig && webpack --watch --env public-path",
     "test": "npm run test:typescript && npm run test:eslint && npm run test:components && npm run test:jasmine",
     "test:server": "node tests/server",
-    "test:unit": "NODE_OPTIONS=\"-r @v4fire/core/build/tsnode.js\" npx playwright test --config tests/config/unit/index.ts",
+    "test:unit": "cross-env NODE_OPTIONS=\"-r @v4fire/core/build/tsnode.js\" npx playwright test --config tests/config/unit/index.ts",
     "test:linters": "npm run test:typescript && npm run test:eslint",
     "test:typescript": "node node_modules/@v4fire/typescript-check",
     "test:eslint": "eslint \"./config/**/*.js\" \"./build/**/*.js\" \"./build/**/*.ts\" \"./src/**/*.js\" \"./src/**/*.ts\"",
@@ -50,6 +50,7 @@
     "requestidlecallback": "0.3.0",
     "snakeskin": "7.5.1",
     "svg-transform-loader": "2.0.13",
+    "cross-env": "7.0.3",
     "tslib": "2.3.1",
     "vue": "2.6.10"
   },
