--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.18.2",
+  "version": "3.18.1",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -135,7 +135,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "3.10.3",
-    "@v4fire/core": "3.74.7",
+    "@v4fire/core": "https://github.com/v4fire/core#client/issues/490",
     "@v4fire/linters": "1.9.0",
     "husky": "7.0.4",
     "nyc": "15.1.0",
