--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "browserslist": "4.19.1",
     "buble": "0.20.0",
     "collection.js": "6.7.11",
-    "config": "1.31.0",
+    "@config/config": "npm:config@1.31.0",
     "copy-dir": "1.3.0",
     "css-minimizer-webpack-plugin": "3.4.1",
     "cssnano": "5.0.17",
