--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.18.2",
+  "version": "3.18.3",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -37,7 +37,7 @@
     "test:components": "gulp test:components --test-processes 2",
     "test:components:chrome": "npm run test:components -- --browsers chrome --retries 2",
     "test:jasmine": "nyc --reporter=lcov --reporter=text npx jasmine",
-    "up": "npm i && npm up"
+    "up": "npm i"
   },
   "dependencies": {
     "escaper": "3.0.6",
@@ -131,7 +131,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "3.10.3",
-    "@v4fire/core": "3.74.7",
+    "@v4fire/core": "3.81.1",
     "@v4fire/linters": "1.9.0",
     "husky": "7.0.4",
     "nyc": "15.1.0",
