--- a/package.json
+++ b/package.json
@@ -131,7 +131,10 @@
     "vue-template-es2015-compiler": "1.9.1",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.2",
-    "worker-loader": "3.0.8"
+    "worker-loader": "3.0.8",
+    "@swc/core": "1.2.147",
+    "@swc/helpers": "0.3.8",
+    "regenerator-runtime": "0.13.9"
   },
   "devDependencies": {
     "@types/jasmine": "3.10.3",
