--- a/package.json
+++ b/package.json
@@ -53,9 +53,8 @@
     "cross-env": "7.0.3",
     "tslib": "2.3.1",
     "vue": "2.6.10",
-    "@swc/core": "1.2.147",
-    "@swc/helpers": "0.3.8",
-    "regenerator-runtime": "0.13.9"
+    "@swc/core": "1.2.152",
+    "@swc/helpers": "0.3.8"
   },
   "peerDependencies": {
     "@v4fire/core": "https://github.com/v4fire/core#client/issues/490",
