--- a/package.json
+++ b/package.json
@@ -43,6 +43,13 @@
     "up": "npm i"
   },
   "dependencies": {
+    "@babel/core": "7.17.5",
+    "@babel/plugin-proposal-decorators": "7.17.2",
+    "@babel/plugin-transform-runtime": "7.17.0",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-typescript": "7.16.7",
+    "@babel/parser": "7.17.7",
+    "@babel/helpers": "7.17.7",
     "escaper": "3.0.6",
     "eventemitter2": "6.4.5",
     "jsdom": "16.7.0",
