--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@swc/helpers": "0.3.8"
   },
   "peerDependencies": {
-    "@v4fire/core": "https://github.com/v4fire/core#client/issues/490",
+    "@v4fire/core": "3.84.0",
     "webpack": "^5.65.0"
   },
   "optionalDependencies": {
@@ -144,7 +144,7 @@
   },
   "devDependencies": {
     "@types/jasmine": "3.10.3",
-    "@v4fire/core": "https://github.com/v4fire/core#client/issues/490",
+    "@v4fire/core": "3.84.0",
     "@v4fire/linters": "1.9.0",
     "husky": "7.0.4",
     "nyc": "15.1.0",
