--- a/package.json
+++ b/package.json
@@ -44,12 +44,15 @@
   },
   "dependencies": {
     "@babel/core": "7.17.5",
+    "@babel/helpers": "7.17.7",
+    "@babel/parser": "7.17.7",
     "@babel/plugin-proposal-decorators": "7.17.2",
     "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-typescript": "7.16.7",
-    "@babel/parser": "7.17.7",
-    "@babel/helpers": "7.17.7",
+    "@swc/core": "1.2.153",
+    "@swc/helpers": "0.3.8",
+    "cross-env": "7.0.3",
     "escaper": "3.0.6",
     "eventemitter2": "6.4.5",
     "jsdom": "16.7.0",
@@ -57,17 +60,15 @@
     "requestidlecallback": "0.3.0",
     "snakeskin": "7.5.1",
     "svg-transform-loader": "2.0.13",
-    "cross-env": "7.0.3",
     "tslib": "2.3.1",
-    "vue": "2.6.10",
-    "@swc/core": "1.2.153",
-    "@swc/helpers": "0.3.8"
+    "vue": "2.6.10"
   },
   "peerDependencies": {
     "@v4fire/core": "3.84.0",
     "webpack": "^5.65.0"
   },
   "optionalDependencies": {
+    "@config/config": "npm:config@1.31.0",
     "@pzlr/build-core": "2.13.0",
     "@pzlr/stylus-inheritance": "3.1.0",
     "@types/glob": "7.2.0",
@@ -79,7 +80,6 @@
     "browserslist": "4.19.1",
     "buble": "0.20.0",
     "collection.js": "6.7.11",
-    "@config/config": "npm:config@1.31.0",
     "copy-dir": "1.3.0",
     "css-minimizer-webpack-plugin": "3.4.1",
     "cssnano": "5.0.17",
@@ -139,17 +139,16 @@
     "vue-template-compiler": "2.6.10",
     "vue-template-es2015-compiler": "1.9.1",
     "webpack-bundle-analyzer": "4.5.0",
-    "webpack-cli": "4.9.2",
-    "worker-loader": "3.0.8"
+    "webpack-cli": "4.9.2"
   },
   "devDependencies": {
+    "@playwright/test": "1.20.0",
     "@types/jasmine": "3.10.3",
     "@v4fire/core": "3.84.0",
     "@v4fire/linters": "1.9.0",
     "husky": "7.0.4",
     "nyc": "15.1.0",
     "playwright": "1.20.0",
-    "@playwright/test": "1.20.0",
-    "webpack": "5.68.0"
+    "webpack": "5.70.0"
   }
 }
