--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "autoprefixer": "10.4.2",
     "browserslist": "4.19.1",
     "buble": "0.20.0",
+    "cli-progress": "^3.11.0",
     "collection.js": "6.7.11",
     "copy-dir": "1.3.0",
     "css-minimizer-webpack-plugin": "3.4.1",
@@ -120,7 +121,6 @@
     "postcss": "8.4.6",
     "postcss-loader": "6.2.1",
     "raw-loader": "4.0.2",
-    "simple-progress-webpack-plugin": "2.0.0",
     "snakeskin-loader": "8.0.1",
     "ss2vue": "1.1.0",
     "style-loader": "3.3.1",
