--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "cssnano": "5.0.17",
     "del": "6.0.0",
     "delay": "5.0.0",
+    "enhanced-resolve": "5.9.2",
     "extract-loader": "5.1.0",
     "fast-css-loader": "1.0.2",
     "file-loader": "6.2.0",
