--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "V4Fire"
   ],
   "scripts": {
-    "build": "gulp build:tsconfig && webpack",
+    "build": "npm run build:tsconfig && webpack",
     "build:tsconfig": "node node_modules/@v4fire/core/build/build-tsconfig",
     "build:file": "gulp build:tsconfig && webpack --env public-path",
     "build:test": "npx webpack --env client-output=b-dummy --env cache-type=memory --env public-path",
@@ -79,7 +79,7 @@
     "autoprefixer": "10.4.2",
     "browserslist": "4.19.1",
     "buble": "0.20.0",
-    "cli-progress": "^3.11.0",
+    "cli-progress": "3.10.0",
     "collection.js": "6.7.11",
     "copy-dir": "1.3.0",
     "css-minimizer-webpack-plugin": "3.4.1",
