--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "V4Fire"
   ],
   "scripts": {
-    "build": "gulp build:tsconfig && webpack",
+    "build": "npm run build:tsconfig && webpack",
     "build:tsconfig": "node node_modules/@v4fire/core/build/build-tsconfig",
     "build:file": "gulp build:tsconfig && webpack --env public-path",
     "build:test": "npx webpack --env client-output=b-dummy --env cache-type=memory --env public-path",
@@ -52,6 +52,7 @@
     "@babel/preset-typescript": "7.16.7",
     "@swc/core": "1.2.153",
     "@swc/helpers": "0.3.8",
+    "chalk": "^4.1.2",
     "cross-env": "7.0.3",
     "escaper": "3.0.6",
     "eventemitter2": "6.4.5",
@@ -79,6 +80,7 @@
     "autoprefixer": "10.4.2",
     "browserslist": "4.19.1",
     "buble": "0.20.0",
+    "cli-progress": "3.10.0",
     "collection.js": "6.7.11",
     "copy-dir": "1.3.0",
     "css-minimizer-webpack-plugin": "3.4.1",
@@ -120,7 +122,6 @@
     "postcss": "8.4.6",
     "postcss-loader": "6.2.1",
     "raw-loader": "4.0.2",
-    "simple-progress-webpack-plugin": "2.0.0",
     "snakeskin-loader": "8.0.1",
     "ss2vue": "1.1.0",
     "style-loader": "3.3.1",
