feat: added @statoscope/webpack-plugin

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@config/config": "npm:config@1.31.0",
     "@pzlr/build-core": "2.13.0",
     "@pzlr/stylus-inheritance": "3.1.0",
+    "@statoscope/webpack-plugin": "5.20.1",
     "@types/glob": "7.2.0",
     "@types/webpack": "5.28.0",
     "@v4fire/config": "1.0.0",
