--- a/package.json
+++ b/package.json
@@ -69,8 +69,6 @@
     "@pzlr/build-core": "2.13.0",
     "@pzlr/stylus-inheritance": "3.1.0",
     "@statoscope/webpack-plugin": "5.24.0",
-    "@types/glob": "7.2.0",
-    "@types/webpack": "5.28.0",
     "@v4fire/config": "1.0.0",
     "@v4fire/design-system": "1.23.0",
     "arg": "5.0.1",
@@ -143,6 +141,9 @@
   "devDependencies": {
     "@playwright/test": "1.20.0",
     "@types/jasmine": "3.10.3",
+    "@types/glob": "7.2.0",
+    "@types/semver": "7.3.10",
+    "@types/webpack": "5.28.0",
     "@v4fire/core": "3.86.2",
     "@v4fire/linters": "1.9.0",
     "husky": "7.0.4",
