feat: refactored favicons, added hiding components in offline mode

--- a/package.json
+++ b/package.json
@@ -52,16 +52,19 @@
     "@babel/preset-typescript": "7.16.7",
     "@swc/core": "1.2.153",
     "@swc/helpers": "0.3.8",
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "cross-env": "7.0.3",
     "escaper": "3.0.6",
     "eventemitter2": "6.4.5",
+    "favicons": "7.0.0-beta.4",
     "jsdom": "16.7.0",
     "path-to-regexp": "3.2.0",
     "requestidlecallback": "0.3.0",
+    "sharp": "0.30.6",
     "snakeskin": "7.5.1",
     "svg-transform-loader": "2.0.13",
     "tslib": "2.3.1",
+    "vinyl": "2.2.1",
     "vue": "2.6.10"
   },
   "optionalDependencies": {
@@ -92,7 +95,6 @@
     "gulp": "4.0.2",
     "gulp-csso": "4.0.1",
     "gulp-ext-replace": "0.3.0",
-    "gulp-favicons": "3.0.0",
     "gulp-gzip": "1.4.2",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "7.1.0",
