--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/core/index.js",
   "typings": "index.d.ts",
   "license": "MIT",
-  "version": "3.23.10",
+  "version": "3.24.0",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@gmail.com",
@@ -64,16 +64,11 @@
     "tslib": "2.3.1",
     "vue": "2.6.10"
   },
-  "peerDependencies": {
-    "@v4fire/core": "3.86.2",
-    "webpack": "^5.65.0"
-  },
   "optionalDependencies": {
     "@config/config": "npm:config@1.31.0",
     "@pzlr/build-core": "2.13.0",
     "@pzlr/stylus-inheritance": "3.1.0",
-    "@types/glob": "7.2.0",
-    "@types/webpack": "5.28.0",
+    "@statoscope/webpack-plugin": "5.24.0",
     "@v4fire/config": "1.0.0",
     "@v4fire/design-system": "1.23.0",
     "arg": "5.0.1",
@@ -146,11 +141,18 @@
   "devDependencies": {
     "@playwright/test": "1.20.0",
     "@types/jasmine": "3.10.3",
+    "@types/glob": "7.2.0",
+    "@types/semver": "7.3.10",
+    "@types/webpack": "5.28.0",
     "@v4fire/core": "3.86.2",
     "@v4fire/linters": "1.9.0",
     "husky": "7.0.4",
     "nyc": "15.1.0",
     "playwright": "1.20.0",
     "webpack": "5.70.0"
+  },
+  "peerDependencies": {
+    "@v4fire/core": "^3.86.2",
+    "webpack": "^5.70.0"
   }
 }
